# ambivo-agents

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  MANUAL_PUBLISH_USAGE.md  README.md  RELEASING.md  SKILL_ASSIGNMENT_SUMMARY.md  WORKFLOW.md  agent_config_sample.yaml  ambivo_agents_config_sample.py  claude_desktop_config.json  demonstrate_synthesis_issues.py  manual_pypi_publish.sh  pyproject.toml  requirements-test.txt  requirements.txt  set_env_template.sh  set_env_template_clean.sh  setup.py
.github/workflows/: pypi-publish.yml  python-package.yml
ambivo_agents/: __init__.py  cli.py
ambivo_agents/agents/: __init__.py  analytics.py  api_agent.py  assistant.py  code_executor.py  database_agent.py  gather_agent.py  knowledge_base.py  knowledge_synthesis.py  media_editor.py  moderator.py  response_quality_assessor.py  web_scraper.py  web_search.py  workflow_developer.py  youtube_download.py
ambivo_agents/config/: loader.py
ambivo_agents/core/: __init__.py  base.py  docker_shared.py  enhanced_workflow.py  file_resolution.py  history.py  interactive_workflow.py  llm.py  memory.py  workflow.py  workflow_orchestrator.py
ambivo_agents/executors/: __init__.py  code_execution_policy.py  docker_executor.py  local_code_executor.py  media_executor.py  media_local_executor.py  youtube_executor.py  youtube_local_executor.py
ambivo_agents/services/: agent_service.py  factory.py  file_processor.py  presentation_generator.py  python_code_formatter.py
demo_documents/: best_practices.txt  company_overview.txt  deployment_guide.txt  products_services.txt  technical_specifications.txt
examples/: analytics_agent_example.py  analytics_one_liner_example.py  analytics_workflow_example.py  api_agent_example.py  basic_chat.py  basic_streaming_example.py  configuration_examples.py  demo_intelligent_conversation.py  direct_agent_example.py  direct_agent_usage_example.py  file_operations_example.py  gather_cli.py  gather_comprehensive_nlp_test.py  gather_natural_language.py  gather_simple.py  health_monitoring.py  intelligent_api_agent_example.py  intelligent_conversation_system.py  knowledge_base_multiple.py  knowledge_base_operations.py  media_audio_extraction.py  media_editor_example.py  moderator_agent.py  mongodb_file_insertion_example.py  mongodb_insert_example.py  one_liner_examples.py  postman_safety_api_agent.py  quick_skill_demo.py  quickstart.py  realtor_database_workflow.py  realtor_renter_chat.py  sample_data.json  sample_properties.json  skill_assignment_demo.py  test_api_routing.py  test_database_analytics_simple.py  workflow_developer_example.py  workflow_stateful_example.py  workflow_stateless_example.py
scripts/: mcp_server.py
tests/: __init__.py  pytest.ini  test_basic.py  test_gather_llm_validation.py  test_gather_url_loading.py  test_in_memory_manager.py  test_moderator_routing.py  test_quality_assessor_synthesis.py  test_synthesis_heartbeat.py  test_web_search_multi_provider.py
