[build-system]
requires = ["setuptools>=61.0,<76", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ambivo-agents"
version = "2.0.9"
description = "Lightweight AI agent framework for research synthesis"
authors = [
    {name = "Hemant Gosain 'Sunny'", email = "info@ambivo.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: AsyncIO",
]
dependencies = [
    # Core dependencies
    "requests>=2.32,<3",
    "click>=8.2,<9",
    "cachetools>=6.1,<7",
    "psutil>=7.0,<8",

    # LLM provider SDKs (direct usage, no langchain wrapper)
    "openai>=1.84,<2",
    "anthropic>=0.55,<1",

    # Web scraping and HTTP
    "httpx>=0.28.1",
    "beautifulsoup4>=4.13.4",

    # Data and config
    "pydantic>=2.11,<3",
    "python-dotenv>=1.1,<2",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
# Redis for distributed memory (optional - in-memory is default)
redis = [
    "redis>=6.2.0,<7",
    "redis[asyncio]",
    "lz4>=4.4,<5",
]

# AWS Bedrock support
aws = [
    "boto3>=1.38,<2",
]

# VoyageAI embeddings (requires langchain)
voyageai = [
    "langchain-core>=0.3.63,<0.4",
    "langchain-voyageai>=0.1.6,<0.2",
]

# Knowledge base (KnowledgeBaseAgent - LlamaIndex, LangChain, Qdrant)
# Python 3.11-3.12 only
knowledge = [
    "qdrant-client>=1.16,<2",
    "langchain>=0.3.25,<0.4",
    "langchain-core>=0.3.63,<0.4",
    "langchain-openai>=0.3.19,<0.4",
    "langchain-aws>=0.2.24,<0.3",
    "langchain-unstructured~=0.1.6",
    "unstructured~=0.17",
    "llama-index-core>=0.12.43,<0.13",
    "llama-index-embeddings-langchain>=0.3,<0.4",
    "llama-index-llms-langchain>=0.6,<0.7",
    "llama-index-llms-openai>=0.4,<0.5",
    "llama-index-vector-stores-qdrant>=0.6,<0.7",
    "llama-index-readers-smart-pdf-loader>=0.3,<0.4",
]

# Document processing
documents = [
    "pypdf>=5.6.1",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "pillow>=11.2.1",
    "pytesseract>=0.3.13",
]

# Async utilities
async = [
    "aiohttp>=3.8.0",
    "aiofiles>=22.1.0",
    "aiosqlite>=0.19.0",
]

# Testing
test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-timeout>=2.1.0",
]

# Development tools
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "black>=25.1.0",
    "isort>=6.0.1",
    "pytest-timeout>=2.1.0",
    "pre-commit>=3.0.0",
]

# All runtime extras (Python 3.11-3.13)
full = [
    "ambivo-agents[redis,aws,documents,async]",
]

# Everything including dev tools
all = [
    "ambivo-agents[full,dev]",
]

# Full extras including knowledge base (Python 3.11-3.12 only)
all-ml = [
    "ambivo-agents[all,knowledge,voyageai]",
]

[project.scripts]
ambivo-agents = "ambivo_agents.cli:main"
ambivo = "ambivo_agents.cli:main"

[project.urls]
Homepage = "https://github.com/ambivo-corp/ambivo-agents"
Repository = "https://github.com/ambivo-corp/ambivo-agents"
Issues = "https://github.com/ambivo-corp/ambivo-agents/issues"
Documentation = "https://github.com/ambivo-corp/ambivo-agents/blob/main/README.md"
Company = "https://www.ambivo.com"

[tool.setuptools.packages.find]
include = ["ambivo_agents*"]

[tool.setuptools.package-data]
ambivo_agents = [
    "*.yaml",
    "*.yml",
    "*.json",
    "*.md",
]

# Black formatting
[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers -m 'not integration'"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
timeout = 300
markers = [
    "integration: Tests requiring infrastructure (Qdrant, Redis, real APIs)",
    "slow: Slow running tests",
]
filterwarnings = [
    "ignore::DeprecationWarning:redis.*",
]
